Closed
Bug 1643348
Opened 5 years ago
Closed 5 years ago
Allow gen7.5 gt2/3 on early beta.
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla79
People
(Reporter: jrmuizel, Assigned: jrmuizel)
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This also drops screen size and battery restrictions.
Assignee | ||
Comment 1•5 years ago
|
||
This also drops screen size and battery restrictions.
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e485617bd678
Allow gen7.5 gt2/3 on early beta. r=aosmond
![]() |
||
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Assignee | ||
Comment 4•5 years ago
|
||
Comment on attachment 9154193 [details]
Bug 1643348 - Allow gen7.5 gt2/3 on early beta.
Beta/Release Uplift Approval Request
- User impact if declined: We would like to ship gen7.5 gt2/3 to release in 79. Without this change there will be only a single beta cylcle of WebRender on gen7.5 gt2/3 on beta.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This only affects early beta.
- String changes made/needed:
Attachment #9154193 -
Flags: approval-mozilla-beta?
Comment 5•5 years ago
|
||
Will a couple of days help that much? I can take this, but just note it would be on for 78.0b5 (shipping tomorrow) and back off in b7 (shipping Monday).
Assignee | ||
Comment 6•5 years ago
|
||
Better than nothing
Comment 7•5 years ago
|
||
Comment on attachment 9154193 [details]
Bug 1643348 - Allow gen7.5 gt2/3 on early beta.
ok then :)
Attachment #9154193 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•5 years ago
|
||
bugherder uplift |
status-firefox78:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•