Bug 1643348 - Allow gen7.5 gt2/3 on early beta. r=aosmond, a=jcristau

This also drops screen size and battery restrictions.

Differential Revision: https://phabricator.services.mozilla.com/D78290